syntax = "proto3";

package branch_service;
option go_package = "genproto/branch_service";
import "branch.proto";

service BranchProductService {
    rpc Create(CreateBranchProductRequest) returns (IdResponse) {}
    rpc Get(IdRequest) returns (GetBranchProductResponse) {}
    rpc GetAll(GetAllBranchProductRequest) returns (GetAllBranchProductResponse) {}
    rpc Update(UpdateBranchProductRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
}

message CreateBranchProductRequest { 
    string product_id = 1;
    string branch_id = 2;
    int32 count = 3;
}

message BranchProduct { 
    string product_id = 1;
    string branch_id = 2;
    int32 count = 3;
    string created_at = 4;
    string  updated_at = 5;
}



message GetBranchProductResponse { 
    BranchProduct branchProduct = 1;
}

message UpdateBranchProductRequest {
    string product_id = 1;
    string branch_id = 2;
    int32 count = 3;
}

message GetAllBranchProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllBranchProductResponse {
     repeated BranchProduct branchProducts = 1;
     int32 count = 2;
}

